# Enchant

./: .gitignore  Makefile.am  configure.in
msvc/: Build.win32.readme  enchant-lsmod.vcproj  enchant.sln  enchant.vcproj  libenchant.vcproj  libenchant_aspell.vcproj  libenchant_hspell.vcproj  libenchant_ispell.vcproj  libenchant_mock_provider.vcproj  libenchant_myspell.vcproj  libenchant_uspell.vcproj  libenchant_voikko.vcproj  libenchant_zemberek.vcproj  test-enchant.vcproj  test-enchantxx.vcproj  unittest-enchant.vcproj  unittest-providers.vcproj
src/: .cvsignore  Makefile.am  pwl.c
src/aspell/: Makefile.am
src/bindings/Enchant.Net/: Enchant.Net.csproj
src/hspell/: Makefile.am
src/ispell/: Makefile.am
src/myspell/: Makefile.am  libenchant_myspell.rc
src/uspell/: Makefile.am
src/voikko/: Makefile.am
src/zemberek/: Makefile.am
tests/: Makefile.am
unittests/: EnchantBrokerTestFixture.h  EnchantTestFixture.h
unittests/Enchant.Net.Tests/: Enchant.Net.Tests.csproj
