SUBDIRS=src tests doc data

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = enchant-cs.pc

EXTRA_DIST =		\
	autogen.sh	\
	enchant-cs.pc.in	\
	enchant-cs-uninstalled.pc.in \
	enchant.spec.in	\
	enchant.spec	\
	lt-compile-resource \
	compile-resource \
	README 		\
	TODO 		\
	HACKING 	\
	NEWS 		\
	BUGS 		\
	ChangeLog 	\
	MAINTAINERS	\
	AUTHORS 	\
	COPYING.LIB
